--- a/css/index.css
+++ b/css/index.css
@@ -135,4 +135,45 @@ button:hover{
     width:100%;
 }
 
+@media (max-width: 500px){
+    nav a{
+        color:#626262;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .artists-container{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width:80%;
+        margin:0 auto;
+    }
+    .artist{
+        width: 65%;
+        text-align: center;
+    }
+
+    .bio{
+        font-size: .5rem;
+    }
+
+    .artist a{
+        font-size: 1.5rem;
+}
+    .artist img{
+        width:100%;
+        height: 50%;
+    }
+
+}
+
+
+
+
+
+
+
+
 
