--- a/css/index.css
+++ b/css/index.css
@@ -138,8 +138,9 @@ button:hover{
 @media (max-width: 500px){
     nav a{
         color:#626262;
-        margin-left: 5%;
-        margin-right: 5%;
+        /* margin-left: 5%; */
+        /* margin-right: 5%; */
+        margin: 0 5%;
     }
 
     .artists-container{
